mvp/examples/deployment-hello-memlimit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 2
  selector:
    app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: alpine:3.20
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
