mvp/examples/service-hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - name: http
      port: 9090
      targetPort: 8080
      protocol: TCP
